fix method checkIntersections